finished assignment 6
