# swagger.json
@@ -28,6 +28,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -49,13 +52,16 @@
                 "date": {
                   "example": "any"
                 },
+                "time": {
+                  "example": "any"
+                },
                 "travelTime": {
                   "example": "any"
                 },
                 "repeat": {
                   "example": "any"
                 },
-                "intitees": {
+                "invitees": {
                   "example": "any"
                 },
                 "showAs": {
@@ -68,6 +74,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -92,6 +101,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -119,13 +131,16 @@
                 "date": {
                   "example": "any"
                 },
+                "time": {
+                  "example": "any"
+                },
                 "travelTime": {
                   "example": "any"
                 },
                 "repeat": {
                   "example": "any"
                 },
-                "intitees": {
+                "invitees": {
                   "example": "any"
                 },
                 "showAs": {
@@ -138,6 +153,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -158,6 +179,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -174,6 +198,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -195,6 +222,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
